fix: correct executable path in pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,5 +16,5 @@ dev_dependencies:
   test: ^1.26.2
 
 executables:
-  ai_tags_remover:
-  ai_tags_remove:
+  ai_tags_remover: main
+  ai_tags_remove: main
