--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,3 +18,6 @@ dev_dependencies:
 executables:
   ai_tags_remover: main
   ai_tags_remove: main
+
+scripts:
+  analyze: "dart run ai_tags_remover"
