--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.8.1
 repository: https://github.com/iBog/ai_tags_remover
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: '>=3.0.0'
 
 dependencies:
   path: ^1.9.1
