--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,18 @@ name: ai_tags_remover
 description: Dart/flutter tool to remove all AI-related invisible (hidden) symbols from the project
 version: 0.8.1
 repository: https://github.com/iBog/ai_tags_remover
+topics:
+  - ai
+  - invisible
+  - hidden
+  - llm
+  - unicode
+  - tags
+  - anchor
+  - hidden_symbols
+  - invisible_symbols
+  - watermark
+  - llm_watermark
 
 environment:
   sdk: '>=3.0.0'
